<resources>
    <string name="app_name">TaptrackMtg</string>
    <string name="buscar">Buscar</string>
    <string name="sets">Sets</string>
    <string name="_6h">6h</string>
    <string name="_12h">12h</string>
    <string name="_24h">24h</string>
    <string name="weekly">Weekly</string>
    <string name="pricetracking">Price tracking</string>
    <string name="lifetap">Lifetap</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monthly">Monthly</string>
    <string name="confirm">Confirm</string>
    <string name="stop_tracking">STOP TRACKING</string>
    <string name="track_price">TRACK PRICE</string>
    <string name="image_not_available">(Image not available)</string>
    <string name="how_often">How often?</string>
    <string name="check_price">Track price?</string>
    <string name="foil">Foil</string>
    <string name="your_tracked_cards">Your tracked cards</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="don_t_have_an_account_register"><u>Don’t have an account? Register</u></string>
    <string name="already_have_an_account_log_in"><u>Already have an account? Log in</u></string>
    <string name="logout">Logout</string>
</resources>